--- a/public/templates/manager/Header.html
+++ b/public/templates/manager/Header.html
@@ -19,7 +19,7 @@
                     <li class="proj dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">项目切换 <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="proj in projs" class="proj ng-class:{active:projN==$index}" ng-click="$parent.projN = $index"><a href="">{{proj.name}}</a></li>
+                            <li ng-repeat="proj in projs" class="proj ng-class:{active:projN==proj.id}" ng-click="$parent.projN = proj.id"><a href="">{{proj.name}}</a></li>
                         </ul>
                     </li>
                     <li class="project item dropdown">
