modifications in 'leader ranking'

--- a/public/templates/leader/projectRanking.html
+++ b/public/templates/leader/projectRanking.html
@@ -26,5 +26,6 @@
                 <li class="next"><a href="" ng-click="lower()">Lower <span aria-hidden="true">&rarr;</span></a></li>
             </ul>
         </nav>
+        <div id="no-data" ng-show="nodata">暂无数据</div>
     </div>
 </section>
