--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -32,3 +32,15 @@ header#big-title {
     text-align: right;
   }
 }
+#no-data{
+  left: 0;
+  position: absolute;
+  height: 230px;
+  width: 100%;
+  background: rgba(80,80,80,0.7);
+  font-size: 30px;
+  color: rgba(200,255,255,0.7);
+  text-align: center;
+  line-height: 200px;
+  vertical-align: middle;
+}
