responsive d3 charts with local d3.js

--- a/public/css/bootless/bootstrap.less
+++ b/public/css/bootless/bootstrap.less
@@ -48,3 +48,11 @@
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
+svg{
+  margin-left:0px;
+  -webkit-transform-origin: 0 0 0;
+  -moz-transform-origin: 0 0 0;
+  -ms-transform-origin: 0 0 0;
+  -o-transform-origin: 0 0 0;
+  transform-origin: 0 0 0;;
+}
