--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -1,18 +1,5 @@
 @import "bootless/bootstrap.less";
-header#big-title {
-  background-color:@gray-dark;
-  color:@brand-primary;
-  height:40px;
-  text-shadow:0 1px 2px rgba(255,255,255,0.4),0 0 1px @brand-primary;
-  h1 {
-    font-size: 1.5em;
-    margin-top:10px;
-  }
-}
-
-.navbar{
-  margin-bottom: 0;
-}
+@import "includes/navbar.less";
 
 .task-list{
   padding:0;
