--- a/public/css/login.less
+++ b/public/css/login.less
@@ -1,16 +1,21 @@
 @import "bootless/bootstrap.less";
-header#big-title {
-  background-color:@gray-dark;
-  color:@brand-primary;
-  text-shadow:0 1px 2px rgba(255,255,255,0.4),0 0 1px @brand-primary;
-  h1 {
-    font-size: 1.5em;
-  }
+@bgcolor:rgb(45,46,47);
+body{
+  background-color: @bgcolor;
 }
 body>div.container.body{
   margin-top:13px;
 }
 #login {
+  #login-logo{
+    width:100%;
+    height:auto;
+  }
+  .panel-heading,.panel-body,.panel-footer{
+    background-color: @bgcolor;
+    border:none;
+  }
+  border:none;
   .panel-body {
     .transition(all 0.5s);
     & > .input-group {
