--- a/public/css/manager.less
+++ b/public/css/manager.less
@@ -1,14 +1,6 @@
 @import "bootless/bootstrap.less";
-header#big-title {
-  background-color:@gray-dark;
-  color:@brand-primary;
-  height:40px;
-  text-shadow:0 1px 2px rgba(255,255,255,0.4),0 0 1px @brand-primary;
-  h1 {
-    font-size: 1.5em;
-    margin-top:10px;
-  }
-}
+@import "includes/navbar.less";
+
 ul{
   padding:0;
   li{
