--- a/public/css/marketing.less
+++ b/public/css/marketing.less
@@ -1,22 +1,9 @@
 @import "bootless/bootstrap.less";
-header#big-title {
-  background-color:@gray-dark;
-  color:@brand-primary;
-  height:40px;
-  text-shadow:0 1px 2px rgba(255,255,255,0.4),0 0 1px @brand-primary;
-  h1 {
-    font-size: 1.5em;
-    margin-top:10px;
-  }
-}
 #map{
-  height:300px;
+  height:150px;
 }
 .input-group {
   margin: 10px;
-}
-ul.dropdown-menu{
-  background-color: @gray-lighter!important;
 }
 section.customer,section.pgoals,section.pranking{
   .btn-default.cat:focus{
@@ -53,3 +40,8 @@ svg:not(:root) {
 #custTable{
   overflow:scroll;
 }
+#map-location-text{
+  white-space: pre-wrap;
+  word-break:break-all;
+}
+@import "includes/navbar.less";
