--- a/public/templates/marketing/personalGoals.html
+++ b/public/templates/marketing/personalGoals.html
@@ -24,5 +24,6 @@
                 <li class="next" ng-click="next()"><a href="">Newer <span aria-hidden="true">&rarr;</span></a></li>
             </ul>
         </nav>
+        <div id="no-data" ng-show="nodata">暂无数据</div>
     </div>
 </section>
