--- a/public/css/marketing.less
+++ b/public/css/marketing.less
@@ -1,6 +1,18 @@
 @import "bootless/bootstrap.less";
-#map{
-  height:150px;
+.img-addon{
+  height:140px;
+  padding:0;
+  position:relative;
+}
+.img-addon-text{
+  width:15px;
+  i{
+    color:@brand-warning;
+    font-size:1.5em;
+  }
+}
+.img-group{
+  background-color: RGB(228,228,228);
 }
 .input-group {
   margin: 10px;
@@ -44,4 +56,61 @@ svg:not(:root) {
   white-space: pre-wrap;
   word-break:break-all;
 }
-@import "includes/navbar.less";
+#no-data{
+  left: 0;
+  position: absolute;
+  height: 230px;
+  width: 100%;
+  background: rgba(80,80,80,0.7);
+  font-size: 30px;
+  color: rgba(200,255,255,0.7);
+  text-align: center;
+  line-height: 200px;
+  vertical-align: middle;
+}
+form{
+  .modify{
+    position:absolute;
+    i{
+      color:@brand-warning;
+      font-size:2em;
+    }
+    &.up {
+      left:50%;
+      top:1px;
+      i{
+        margin-left:-50%;
+      }
+    }
+    &.left{
+      left:1px;
+      top:50%;
+      i{
+        margin-top:-50%;
+      }
+    }
+    &.right{
+      right:1px;
+      top:50%;
+      i{
+        margin-top:-50%;
+      }
+    }
+    &.down{
+      bottom:1px;
+      left:50%;
+      i{
+        margin-left: -50%;
+      }
+    }
+    &.ok{
+      left:50%;
+      top:50%;
+      i{
+        margin-left: -50%;
+        margin-top: -50%;
+      }
+    }
+  }
+}
+  @import "includes/navbar.less";
