--- a/public/templates/service/detail.html
+++ b/public/templates/service/detail.html
@@ -39,7 +39,7 @@
     </tr>
     <tr>
         <td>客户来源位置</td>
-        <td>{{data.position}}</td>
+        <td>{{data.position.split(',').slice(2).join(',')}}</td>
     </tr>
     <tr>
         <td>行销渠道来源</td>
