--- a/public/templates/service/detail.html
+++ b/public/templates/service/detail.html
@@ -43,7 +43,7 @@
     </tr>
     <tr>
         <td>行销渠道来源</td>
-        <td>{{'nodata'}}</td>
+        <td>{{data.salesMode.name}}</td>
     </tr>
     <tr>
         <td>行销专员姓名</td>
