去掉filter关闭时，行销专员临时加传的参数。&&修改“客户详情”为空的bug（description -> detail）

--- a/public/templates/marketing/backup.html
+++ b/public/templates/marketing/backup.html
@@ -46,7 +46,7 @@
     </div>
     <div class="input-group">
         <span class="input-group-addon">描述</span>
-        <textarea ng-model="customer.description" rows="8" maxlength="280" class="form-control" placeholder="Description"></textarea>
+        <textarea ng-model="customer.detail" rows="8" maxlength="280" class="form-control" placeholder="Description"></textarea>
     </div>
     <div class="btn-group btn-group-justified" role="group" aria-label="...">
         <div class="btn-group" role="group">
