--- a/public/templates/service/detail.html
+++ b/public/templates/service/detail.html
@@ -35,7 +35,7 @@
     </tr>
     <tr>
         <td>客户备注</td>
-        <td>{{data.description}}</td>
+        <td>{{data.detail}}</td>
     </tr>
     <tr>
         <td>客户来源位置</td>
