--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -1,17 +1,50 @@
 @import "bootless/bootstrap.less";
 @import "includes/navbar.less";
-
 .task-list{
   padding:0;
   list-style: none;
   &>.task-card{
+    color:#e7e7e7;
+    #gradient .horizontal(transparent,#444,35%,100%);
     margin:4px;
-    border:2px solid @brand-primary;
+    border:1px solid #444;
     border-radius: 15px;
+    padding-right:0;
     height:100px;
+    .task-card-title{
+      text-align: right;
+      padding:8px 15px 8px 0;
+      width:40%;
+      height: 100%;
+      .border-right-radius(15px);
+      .task{
+        font-size:0.8em;
+        &.name{
+          font-size:1.2em;
+          font-weight: bold;
+        }
+      }
+    }
+    &.new{
+      .task-card-title{
+        padding:0 15px;
+      }
+    }
+    .task-card-content{
+      color:#333;
+      p{
+        margin:0 0 5px;
+        height:20px;
+        &.area{
+          height:40px;
+        }
+        &.staff{
+          .text-overflow();
+        }
+      }
+    }
   }
   &>.new-task{
-    color:@brand-primary;
     font-size:2em;
     height:50px;
     line-height: 50px;
@@ -30,4 +63,21 @@
   text-align: center;
   line-height: 200px;
   vertical-align: middle;
+}
+
+#map{
+  height:200px;
+  width:250px;
+  position:relative;
+}
+#map-hidden-input{
+  width:0;
+  padding:0;
+  border:0;
+}
+#overlay{
+  position:absolute;
+  border-radius:50%;
+  background-color:rgba(24,188,208,0.4);
+  display:none;
 }
