--- a/public/templates/leader/taskList.html
+++ b/public/templates/leader/taskList.html
@@ -1,21 +1,26 @@
 <h4>预览任务列表</h4>
 <div class="container">
     <ul class="task-list row">
-        <li class="task-card col-xs-12 col-sm-6 col-md-4 col-lg-3 new-task" ng-click="new()">
-            <i class="glyphicon glyphicon-plus-sign"></i>
+        <li class="task-card new col-xs-12 col-sm-6 col-md-4 col-lg-3 new-task" ng-click="new()">
+            <div class="pull-right task-card-title">
+                <i class="glyphicon glyphicon-plus-sign"></i>
+            </div>
         </li>
         <li ng-repeat="item in listData.dataList" class="task-card col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <task-card
+                    name="item.name"
                     id="item.uuid"
                     names="item.userList"
-                    time="item.createTime"
+                    time="item.actionTime"
                     method="item.salesMode.name"
                     budget="item.budget"
-                    area="item.area">
+                    area="item.area.split(',').slice(2).join(',')">
             </task-card>
         </li>
-        <li class="task-card col-xs-12 col-sm-6 col-md-4 col-lg-3 new-task" ng-click="new()">
-            <i class="glyphicon glyphicon-plus-sign"></i>
+        <li class="task-card new col-xs-12 col-sm-6 col-md-4 col-lg-3 new-task" ng-click="new()">
+            <div class="pull-right task-card-title">
+                <i class="glyphicon glyphicon-plus-sign"></i>
+            </div>
         </li>
     </ul>
 </div>
