loading icon and paging for task list

--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -75,9 +75,16 @@
   padding:0;
   border:0;
 }
-#overlay{
-  position:absolute;
-  border-radius:50%;
-  background-color:rgba(24,188,208,0.4);
-  display:none;
+#overlay {
+  position: absolute;
+  border-radius: 50%;
+  background-color: rgba(24, 188, 208, 0.4);
+  display: none;
+}
+#loading{
+  text-align: center;
+  img{
+    height:30px;
+    width:30px;
+  }
 }
