--- a/public/templates/leader/taskList.html
+++ b/public/templates/leader/taskList.html
@@ -6,7 +6,7 @@
                 <i class="glyphicon glyphicon-plus-sign"></i>
             </div>
         </li>
-        <li ng-repeat="item in listData.dataList" class="task-card col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <li ng-repeat="item in listData" class="task-card col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <task-card
                     name="item.name"
                     id="item.uuid"
@@ -17,6 +17,7 @@
                     area="item.area.split(',').slice(2).join(',')">
             </task-card>
         </li>
+        <li ng-show="loading" id="loading"><img src="/public/images/loading.gif"></li>
         <li class="task-card new col-xs-12 col-sm-6 col-md-4 col-lg-3 new-task" ng-click="new()">
             <div class="pull-right task-card-title">
                 <i class="glyphicon glyphicon-plus-sign"></i>
