--- a/public/templates/leader/taskUpdate.html
+++ b/public/templates/leader/taskUpdate.html
@@ -33,19 +33,21 @@
     </div>
     <div class="input-group">
         <span class="input-group-addon" id="basic-addon1-2">成交目标</span>
-        <input name="quotaDeal" ng-model="data.quotaDeal" type="text" class="form-control" ng-pattern="number"
+        <input name="quotaDeal" ng-model="data.quotaDeal" type="text" class="form-control"
                placeholder="budget" aria-describedby="basic-addon1-2">
         <span class="input-group-addon" id="basic-addon1-3">到访目标</span>
-        <input name="quotaVisit" ng-model="data.quotaVisit" type="text" class="form-control" ng-pattern="number"
+        <input name="quotaVisit" ng-model="data.quotaVisit" type="text" class="form-control"
                placeholder="budget" aria-describedby="basic-addon1-3">
     </div>
-    <div class="input-group">
-        <span class="input-group-addon" id="basic-addon2">员工</span>
-        <select multiple="multiple" class="form-control" name="staff"
+        <label>
+            <div class="input-group">
+                <span class="input-group-addon" id="basic-addon2">员工</span>
+                <select multiple="multiple" class="form-control" name="staff"
                 aria-describedby="basic-addon2">
-            <option ng-repeat="staff in staffs" value="{{staff.uuid}}">{{staff.name}}</option>
-        </select>
-    </div>
+                    <option ng-repeat="staff in staffs" value="{{staff.uuid}}">{{staff.name}}</option>
+                </select>
+            </div>
+        </label>
     <div class="input-group">
         <span class="input-group-addon" id="basic-addon3">行销区域</span>
         <input id="map-hidden-input" ng-model="data.area" disabled type="text" class="form-control"
