--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -78,7 +78,7 @@
 #overlay {
   position: absolute;
   border-radius: 50%;
-  background-color: rgba(24, 188, 208, 0.4);
+  background-color: rgba(24, 188, 208, 0.3);
   display: none;
 }
 #loading{
@@ -87,4 +87,7 @@
     height:30px;
     width:30px;
   }
+}
+#goalsContent{
+  padding-bottom: 100px;
 }
