--- a/public/templates/leader/projectGoals.html
+++ b/public/templates/leader/projectGoals.html
@@ -21,5 +21,10 @@
                 <li class="next"><a href="">Newer <span aria-hidden="true">&rarr;</span></a></li>
             </ul>
         </nav>
+        <table datatable class="table table-striped m-b-none">
+            <thead><tr>
+                <th>时间段</th><th>目标人数</th><th>实际成交</th>
+            </tr></thead>
+        </table>
     </div>
 </section>
