dataTable in leader's goals finished

--- a/public/templates/leader/projectGoals.html
+++ b/public/templates/leader/projectGoals.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div ng-controller="goalsContentCtrl" id="goalsContent">
-        <nav>
+        <nav class="hidden">
             <ul class="pager">
                 <li class="previous"><a href=""><span aria-hidden="true">&larr;</span> Older</a></li>
                 <li class="next"><a href="">Newer <span aria-hidden="true">&rarr;</span></a></li>
