--- a/public/css/marketing.less
+++ b/public/css/marketing.less
@@ -37,6 +37,7 @@ body {
   display: none;
 }
 #pgoalContent,#prankingContent {
+  position:relative;
   .pager {
     margin: 0;
   }
@@ -58,6 +59,7 @@ svg:not(:root) {
 }
 #no-data{
   left: 0;
+  top:80px;
   position: absolute;
   height: 230px;
   width: 100%;
