--- a/public/templates/leader/projectGoals.html
+++ b/public/templates/leader/projectGoals.html
@@ -23,7 +23,7 @@
         </nav>
         <table datatable class="table table-striped m-b-none">
             <thead><tr>
-                <th>时间段</th><th>目标人数</th><th>实际成交</th>
+                <th>时间段</th><th>目标人数</th><th>实际人数</th>
             </tr></thead>
         </table>
     </div>
