--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -54,6 +54,7 @@
 }
 #no-data{
   left: 0;
+  top:40px;
   position: absolute;
   height: 230px;
   width: 100%;
@@ -90,4 +91,5 @@
 }
 #goalsContent{
   padding-bottom: 100px;
+  position: relative;
 }
