--- a/public/templates/leader/projectGoals.html
+++ b/public/templates/leader/projectGoals.html
@@ -26,5 +26,6 @@
                 <th>时间段</th><th>目标人数</th><th>实际人数</th>
             </tr></thead>
         </table>
+        <div id="no-data" ng-show="nodata">暂无数据</div>
     </div>
 </section>
