--- a/public/css/manager.less
+++ b/public/css/manager.less
@@ -7,3 +7,20 @@ ul{
     list-style: none;
   }
 }
+#no-data{
+  left: 0;
+  top:40px;
+  position: absolute;
+  height: 230px;
+  width: 100%;
+  background: rgba(80,80,80,0.7);
+  font-size: 30px;
+  color: rgba(200,255,255,0.7);
+  text-align: center;
+  line-height: 200px;
+  vertical-align: middle;
+}
+#goalsContent{
+  padding-bottom: 100px;
+  position: relative;
+}
