--- a/public/css/manager.less
+++ b/public/css/manager.less
@@ -9,7 +9,7 @@ ul{
 }
 #no-data{
   left: 0;
-  top:40px;
+  top:63px;
   position: absolute;
   height: 230px;
   width: 100%;
@@ -23,4 +23,7 @@ ul{
 #goalsContent{
   padding-bottom: 100px;
   position: relative;
+}
+.dataTables_wrapper{
+  padding-bottom: 100px;
 }
