城市总经理部分的“团队pk榜”完成

--- a/public/css/manager.less
+++ b/public/css/manager.less
@@ -27,3 +27,8 @@ ul{
 .dataTables_wrapper{
   padding-bottom: 100px;
 }
+section.pranking{
+  .dataTables_wrapper{
+    padding-bottom: 150px;
+  }
+}
