--- a/public/css/marketing.less
+++ b/public/css/marketing.less
@@ -70,6 +70,14 @@ svg:not(:root) {
   line-height: 200px;
   vertical-align: middle;
 }
+.dataTables_wrapper{
+  padding-bottom: 100px;
+}
+section.pranking{
+  .dataTables_wrapper{
+    padding-bottom: 150px;
+  }
+}
 form{
   .modify{
     position:absolute;
