绩效表格“日期列”宽度修改 & 排名表格表头切换

--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -1,5 +1,6 @@
 @import "bootless/bootstrap.less";
 @import "includes/navbar.less";
+@import "includes/others.less";
 .task-list{
   padding:0;
   list-style: none;
