--- a/public/css/marketing.less
+++ b/public/css/marketing.less
@@ -1,4 +1,7 @@
 @import "bootless/bootstrap.less";
+@import "includes/navbar.less";
+@import "includes/others.less";
+
 .img-addon{
   height:140px;
   padding:0;
