--- a/public/templates/marketing/personalGoals.html
+++ b/public/templates/marketing/personalGoals.html
@@ -28,7 +28,7 @@
             </nav>
             <table datatable class="table table-striped m-b-none">
                 <thead><tr>
-                    <th>时间段</th><th>实际人数</th><th>目标人数</th><th>完成率</th>
+                    <th>时间段</th><th>实际</th><th>目标</th><th>完成率</th>
                 </tr></thead>
             </table>
         </div>
