more precise geolocation.

--- a/public/css/marketing.less
+++ b/public/css/marketing.less
@@ -127,3 +127,12 @@ form{
   }
 }
   @import "includes/navbar.less";
+.lbs-tag{
+  color: #31708f!important;
+}
+.geo-bar-box .locbar{
+  border:1px solid #d9edf7!important;
+  background: #d9edf7!important;
+  margin-right:0;
+  margin-left:0;
+}
