--- a/public/templates/marketing/backup.html
+++ b/public/templates/marketing/backup.html
@@ -1,16 +1,15 @@
 <form novalidate name="custForm" ng-jq>
-    <lbs-geo class=" alert alert-info" city="北京" enable-modified="false" id="geo"></lbs-geo>
-    <p ng-bind="customer.location" id="map-location-text" class="hidden"></p>
     <div class="input-group img-group">
-        <span class="input-group-addon img-addon-text">报备地点</span>
         <input style="width:0;border:0;padding:0;" disabled ng-model="customer.pt" type="text" class="form-control" placeholder="">
         <span class="input-group-addon img-addon">
-            <img width="180" height="140"
-                 src="http://api.map.baidu.com/staticimage?width=180&height=140
+            <img width="100%" height="auto"
+                 src="http://api.map.baidu.com/staticimage?width=640&height=420
                  &zoom=15&markers={{customer.pt}}&center={{customer.pt}}&
                  markerStyles=l,A,#f0ad4e&scale=2&copyright=1" />
         </span>
     </div>
+    <lbs-geo class="alert alert-info" city="北京" enable-modified="false" id="geo"></lbs-geo>
+    <p ng-bind="customer.location" id="map-location-text" class="hidden"></p>
     <div class="input-group">
         <span class="input-group-addon">报备时间</span>
         <input disabled ng-model="customer.time" type="text" class="form-control" placeholder="">
