--- a/public/templates/leader/Header.html
+++ b/public/templates/leader/Header.html
@@ -15,7 +15,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="task item"><a href="#/task/list">任务管理 <span class="sr-only">(current)</span></a></li>
+                    <li class="task item"><a href="#/task/list">任务列表 <span class="sr-only">(current)</span></a></li>
+                    <li class="sign item"><a href="#/sign/list">签到列表</a></li>
                     <li class="project item dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">项目相关 <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
