--- a/public/templates/marketing/Header.html
+++ b/public/templates/marketing/Header.html
@@ -9,9 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img alt="Brand" src="/public/images/logo.png" height="100%" width="auto"></a>
+                <a class="navbar-brand" href="#/"><img alt="Brand" src="/public/images/logo.png" height="100%" width="auto"></a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
