--- a/public/templates/service/detail.html
+++ b/public/templates/service/detail.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
         <td>项目名称</td>
-        <td>{{data.projectName}}</td>
+        <td>{{data.sales.project.name}}</td>
     </tr>
     <tr>
         <td>客户姓名</td>
