--- a/public/templates/manager/Header.html
+++ b/public/templates/manager/Header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img alt="Brand" src="/public/images/logo.png" height="100%" width="auto"></a>
+                <a class="navbar-brand" href=""><img alt="Brand" src="/public/images/logo.png" height="100%" width="auto"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
