--- a/public/templates/leader/taskUpdate.html
+++ b/public/templates/leader/taskUpdate.html
@@ -12,7 +12,7 @@
                 <input type="radio" name="options" id="option1" autocomplete="off"> 今天
             </label>
             <label ng-click="setDate('tomorrow')" class="time tomorrow btn btn-primary active">
-                <input type="radio" name="options" id="option2" autocomplete="off" checked> 明天{{'（默认）'}}
+                <input type="radio" name="options" id="option2" autocomplete="off" checked> 明天'（默认）'
             </label>
         </div>
         <input disabled type="text" class="form-control"
