--- a/public/css/leader.less
+++ b/public/css/leader.less
@@ -38,6 +38,7 @@
         height:20px;
         &.area{
           height:40px;
+          overflow:hidden;
         }
         &.staff{
           .text-overflow();
