--- a/public/templates/leader/taskList.html
+++ b/public/templates/leader/taskList.html
@@ -14,7 +14,7 @@
                     time="item.actionTime"
                     method="item.salesMode.name"
                     budget="item.budget"
-                    area="item.area.split(',').slice(2).join(',')">
+                    area="item.area.split(',').slice(4).join('')">
             </task-card>
         </li>
         <li ng-show="loading" id="loading"><img src="/public/images/loading.gif"></li>
